--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -78,7 +78,7 @@
 
 /* Modal */
 .modal {
-  display: block; /* Hidden by default */
+  display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
@@ -86,13 +86,13 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   padding: 20px 20px 30px;
 }
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 10% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
   width: 50%; /* Could be more or less, depending on screen size */
@@ -110,100 +110,101 @@
   text-decoration: none;
   cursor: pointer;
 }
-.modal-product-detail{
+.modal-product-detail {
   display: flex;
   /* align-items: center; */
   /* justify-content: space-between; */
 }
-.content-product{
+.content-product {
   display: flex;
   flex-direction: column;
   width: 50%;
   margin-left: 20px;
 }
 .content-product h3 {
- font-size: 28px;
- margin-bottom: 0px;
+  font-size: 28px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
-.size-product{
-  margin-top:30px ;
+.size-product {
+  margin-top: 30px;
 }
 .txt-price {
   font-size: 28px;
 }
-.modal-action{
+.modal-action {
   display: flex;
   justify-content: space-between;
   padding: 10px 0px;
   margin-bottom: 20px;
 }
-.icon-trash{
+.icon-trash {
   padding: 10px;
   background-color: red;
   border-radius: 10px;
   color: white;
 }
-.image-product{
+.image-product {
   width: 50%;
   margin-right: 20px;
 }
-.image-product img{
+.image-product img {
   width: 100%;
   border-radius: 10px;
 }
-.wrap-start{
+.wrap-start {
   display: flex;
   margin: 30px 0;
 }
 .wrap-start .fa-star {
-  color: #FFC403;
+  color: #ffc403;
   font-size: 35px;
 }
-.wrap-size{
+.wrap-size {
   display: flex;
-  margin: 30px 0 ;
+  margin: 30px 0;
   justify-content: space-between;
   width: 60%;
 }
-.wrap-size .small{
+.wrap-size .small {
   margin-left: 0px;
 }
-.size{
+.size {
   padding: 5px 20px;
   border-radius: 5px;
   border-width: 1px;
   border-color: #888;
-  border-style:solid;
+  border-style: solid;
   margin: 0 20px;
 }
-.select-number{
+.select-number {
   display: flex;
   width: 60%;
   justify-content: space-between;
 }
-.number{
+.number {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.number .reduce{
+.number .reduce {
   margin-left: 0px;
 }
 .number .action-product {
   padding: 10px 20px;
   border-radius: 10px;
-  background-color: #FF4D00;
+  background-color: #ff4d00;
   margin: 0 10px;
   color: white;
 }
-.select-number button{
+.select-number button {
   padding: 10px 20px;
   border-radius: 10px;
-  background-color: #FF4D00;
+  background-color: #ff4d00;
   color: white;
   border-color: transparent;
 }
-.txt-description{
+.txt-description {
   padding: 0 20px;
   font-weight: 500;
 }
