--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -208,5 +208,33 @@
   padding: 0 20px;
   font-weight: 500;
 }
-.status-product {
+.modal-action-create {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 0px;
+  margin-bottom: 20px;
+}
+.formbold-form-input {
+  text-align: center;
+  width: 100%;
+  padding: 13px 22px;
+  border-radius: 5px;
+  border: 1px solid #dde3ec;
+  background: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  color: #536387;
+  outline: none;
+  resize: none;
+}
+.formbold-form-input:focus {
+  border-color: #6a64f1;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+}
+.formbold-form-label {
+  color: #536387;
+  font-size: 14px;
+  line-height: 24px;
+  display: block;
+  margin-bottom: 10px;
 }
